Fixed bug #69371 (Hash table collision leads to inaccessible array keys)